--- a/source/dialogs/create-new-zone-template/create-new-zone-template-modal.html
+++ b/source/dialogs/create-new-zone-template/create-new-zone-template-modal.html
@@ -13,16 +13,13 @@
                     &times;
                 </button>
                 <h4 class="modal-title">
-                    <span class="user-define-16x16"></span>&nbsp;Create new zoneset</h4>
+                    <span class="user-define-16x16"></span>&nbsp;Create new zone template</h4>
             </div>
             <div class="modal-body">
                 <div class="">
-                    <h5 class="modal-infomation-title">
-                        <span class="user-define-16x16"></span>&nbsp;Zoneset
-                    </h5>
                     <form class="form-horizontal" action="" name="modalNewProject">
                         <div class="form-group">
-                            <label class="control-label col-sm-3" for="name">Zoneset name:</label>
+                            <label class="control-label col-sm-3" for="name">Name:</label>
                             <div class="col-sm-9">
                                 <input type="text" class="form-control" ng-model="wiModal.zoneSet.name" required>
                             </div>
