--- a/source/dialogs/histogram-format/histogram-format-modal.html
+++ b/source/dialogs/histogram-format/histogram-format-modal.html
@@ -13,7 +13,7 @@
                                 <div style='padding:10px;display:flex;flex-direction:row;height:100%;'>
                                     <div class='panel panel-default tree-side'>
                                         <div class='panel-heading' style='display: flex;'>
-                                            <h5 style="flex:1;">Data type</h5>
+                                            <h5 style="flex:1;" class="margin-top-0_5em">Data type</h5>
                                             <div style='flex:2;text-align: right;'>
                                                 <label class="btn btn-default" ng-click="wiModal.onSelectionTypeChanged(wiModal.FAMILY_GROUP_SELECTION)" ng-class='{active: wiModal.selectionType==wiModal.FAMILY_GROUP_SELECTION}'
                                                     style="margin-right: 5px;" title='Family Group'>
@@ -87,6 +87,7 @@
                                 <div style="height:100%;display:flex;flex-direction:row;padding:10px;">
                                     <div class="panel panel-default tree-side">
                                         <div style='display:flex;' class='panel-heading'>
+                                            <h5>Project</h5>
                                             <wi-item-dropdown ng-show='!wiModal.isFrozen' style='flex:1;margin:5px 0;' class='height24px' icon="'project-open-16x16'"
                                             on-wi-dropdown-init='wiModal.getProjectList'
                                             on-item-changed="wiModal.projectChanged">
@@ -110,7 +111,9 @@
                                     </div>
                                     <div class='wi-droppable' style="flex:2;margin-left: 5px;" wi-element-ready="wiModal.droppableSetting();">
                                         <div class="panel panel-default" style='height: 100%;display:flex;flex-direction: column;'>
-                                            <div class="panel-heading"></div>
+                                            <div class="panel-heading">
+                                                    <h5>Input Data</h5>
+                                            </div>
                                             <div style='margin: 5px;position: relative;'>
                                                 <i style="position:absolute;line-height:2.5em;left:0.5em;font-size:14px;" class="fa fa-search"></i>
                                                 <input type='text' class='form-control' style='text-indent:1.5em;' ng-model='wiModal.inputFilter' size='10'>
@@ -131,42 +134,96 @@
                         <div class="container-fluid">
                             <form class="form-horizontal form-condensed">
                                 <div class="row">
-                                    <div class="col-sm-2 text-center padding-bottom-1em">
-                                        <strong>Scales</strong>
+                                    <label class="margin-bottom-0 margin-top-0_25em col-sm-2 font-weight-normal">Left</label>
+                                    <div class="col-sm-2 padding-right-0 padding-left-0">
+                                        <input type="number" class="form-control wi-form-control" id="scaleLeft" ng-model="wiModal.config.scale.left"
+                                            ng-change="wiModal.checkLogaValue(wiModal.config.scale.left, 'scaleLeft')">
                                     </div>
-                                    <div class="col-sm-2 text-center padding-bottom-1em">
-                                        <strong>Major</strong>
+                                    <label class="margin-bottom-0 margin-top-0_25em col-sm-2 font-weight-normal">Right</label>
+                                    <div class="col-sm-2 padding-right-0 padding-left-0">
+                                        <input type="number" class="form-control wi-form-control" id="scaleRight" ng-model="wiModal.config.scale.right"
+                                            ng-change="wiModal.checkLogaValue(wiModal.config.scale.right, 'scaleRight')">
                                     </div>
-                                    <div class="col-sm-2 text-center padding-bottom-1em">
-                                        <strong>Minor</strong>
+                                    <label class="margin-bottom-0 margin-top-0_25em col-sm-2 font-weight-normal">Divisions</label>
+                                    <div class="col-sm-2 padding-right-0 padding-left-0">
+                                        <input type="number" class="form-control wi-form-control"
+                                        ng-model="wiModal.config.numOfDivisions">
                                     </div>
                                 </div>
-
-                                <div class="row padding-bottom-0_5em">
-                                    <div class="col-sm-2">
-                                        <label class="control-label col-sm-4 font-weight-normal">Left</label>
-                                        <div class="col-sm-8 padding-right-0">
-                                            <input type="number" class="form-control wi-form-control" id="scaleLeft" ng-model="wiModal.config.scale.left"
-                                                ng-change="wiModal.checkLogaValue(wiModal.config.scale.left, 'scaleLeft')">
+                                <div class="row">
+                                    <div class="col-sm-3">
+                                        <input type="checkbox" ng-model="wiModal.config.loga">
+                                        <label>Loga</label>
+                                    </div>
+                                    <div class="col-sm-3">
+                                        <input type="checkbox" ng-model="wiModal.config.showGrid">
+                                        <label>Show Grid</label>
+                                    </div>
+                                    <div class="col-sm-3">
+                                        <input type="checkbox" ng-model="wiModal.config.flipHorizontal">
+                                        <label>Flip Horizontal</label>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-4">
+                                        <input type="radio" name='plotType' ng-model="wiModal.config.plotType" value="Frequency">
+                                        <label>Frequency count</label>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <input type="radio" name='plotType' ng-model="wiModal.config.plotType" value="Percent">
+                                        <label>Percentile</label>
+                                    </div>
+                                </div>
+                                <hr>
+                                <div style="height:100%;display:flex;flex-direction:row;padding:10px;">
+                                    <div class="panel panel-default tree-side">
+                                        <div style="flex: 1; position: relative; overflow-y: auto;">
+                                            <wi-base-treeview id='{{wiModal.taskDataTreeName}}' name='wiCrossplotFormatModalTaskDataTreeName' style="margin-left: 0px;" config='wiModal.taskConfig.inputData'>
+                                            </wi-base-treeview>
                                         </div>
                                     </div>
-                                    <div class="col-sm-2">
-                                        <label class="control-label col-sm-4 font-weight-normal">Right</label>
-                                        <div class="col-sm-8 padding-right-0">
-                                            <input type="number" class="form-control wi-form-control" id="scaleRight" ng-model="wiModal.config.scale.right"
-                                                ng-change="wiModal.checkLogaValue(wiModal.config.scale.right, 'scaleRight')">
+                                    <div style="flex:2;margin-left: 5px;">
+                                        <div class="panel panel-default" style='height: 100%;display:flex;flex-direction: column;'>
+                                            <ul>
+                                                <li style="list-style-type: none"
+                                                ng-repeat="props in wiModal.curvesProperties"
+                                                ng-if="props.flag != 'delete'">
+                                                    <form>
+                                                        <div class="row">
+                                                            <div class="col-sm-3">
+                                                                <input type="checkbox" ng-model="props.options.showGaussian">
+                                                                <label>Show Gaussian</label>
+                                                            </div>
+                                                            <div class="col-sm-3">
+                                                                <input type="checkbox" ng-model="props.options.showCumulative">
+                                                                <label>Show Cumulative</label>
+                                                            </div>
+                                                            <div class="col-sm-2">
+                                                                <input type="radio" name='plot{{props.idCurve}}' ng-model="props.options.plot" value="Bar">
+                                                                <label>Bar</label>
+                                                            </div>
+                                                            <div class="col-sm-2">
+                                                                <input type="radio" name='plot{{props.idCurve}}' ng-model="props.options.plot" value="Curve">
+                                                                <label>Curve</label>
+                                                            </div>
+                                                            <div class="col-sm-2">
+                                                                <div class="form-group">
+                                                                    <label class="col-sm-3">Color</label>
+                                                                    <div class="col-sm-9">
+                                                                        <div class="float-left">
+                                                                            <button type="button" ng-click="wiModal.pickColor(props);"
+                                                                                ng-style="{'background-color':props.options.lineColor}"
+                                                                                class="form-control wi-form-control width-80px thick-border">
+                                                                            </button>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </form>
+                                                </li>
+                                            </ul>
                                         </div>
-                                    </div>
-                                    <div class="col-sm-1">
-                                        <label class="font-weight-normal">
-                                            <input type="checkbox" value="" ng-model="wiModal.config.logX" ng-change="wiModal.checkLogaStatus()">Log
-                                        </label>
-                                    </div>
-                                    <div class="col-sm-2">
-                                        <input type="number" class="form-control wi-form-control" ng-model="wiModal.config.majorX">
-                                    </div>
-                                    <div class="col-sm-2">
-                                        <input type="number" class="form-control wi-form-control" ng-model="wiModal.config.minorX">
                                     </div>
                                 </div>
                             </form>
@@ -190,6 +247,18 @@
         </div>
     </div>
     <style>
+        .margin-bottom-0 {
+            margin-bottom: 0;
+        }
+
+        .margin-top-0_25em {
+            margin-top: 0.25em;
+        }
+
+        .margin-top-0_5em {
+            margin-top: 0.5em;
+        }
+
         wi-tabset>div {
             height: calc(100% - 180px);
         }
