--- a/source/dialogs/curve-family/curve-family-modal.html
+++ b/source/dialogs/curve-family/curve-family-modal.html
@@ -5,8 +5,54 @@
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" aria-hidden="true">&times;</button>
                 <h4>Edit Family</h4>
             </div>
-            <div class="modal-body">
-                <style>
+            <div class="modal-body" style="padding-top: 10px; padding-bottom: 15px;">
+              <div style="display: flex;">
+                <div style="flex: 1; width: 50%; padding-right: 5px;">
+                    <div class="wrapper-style">
+                        <div class="text-heading">Family Groups</div>
+                        <div style='background-color:white;display: flex;padding-top: 2px; padding-left: 7px; border: 1px solid #ccc;' class="box-shadow-ccc">
+                            <i style="font-size: 16px; line-height:28px;z-index:1;color:#aaa;float: left;" class="fa fa-search"></i>
+                            <input type='text' id="focus" 
+                                    style='flex:1; margin-left: -22px; padding-left: 32px;color:steelblue; border: none'
+                                    ng-model="wiModal.filter">
+                        </div>
+                        <div style="height: 400px;overflow-y: overlay;display:flex;  border: 1px solid #ccc; border-top: none" class='box-shadow-ccc'>
+                            <wi-scroll id-scroll='"__familyGroupScroll"' style='flex:1;display:flex;flex-direction:column;' up-trigger="wiModal.upTriggerGroup" down-trigger='wiModal.downTriggerGroup' animation-timeout="0">
+                                <wi-base-treeview
+                                    name="__familyGroup"
+                                    container="wiModal"
+                                    config="wiModal.groupConfig"
+                                    on-click-function='wiModal.onClickGroupFunction'
+                                    filter="{{wiModal.filter}}">
+                                </wi-base-treeview>
+                            </wi-scroll>
+                        </div>
+                    </div>
+                </div>
+                <div style="flex: 1; padding-left: 5px;">
+                    <div class="wrapper-style">
+                        <div class="text-heading">Families in <span style="font-weight: bold">{{wiModal.getGroupName(wiModal.selectedGroup)}}</span></div>
+                        <div style='background-color:white;display: flex;padding-top: 2px; padding-left: 7px; border: 1px solid #ccc;' class="box-shadow-ccc">
+                            <i style="font-size: 16px; line-height:28px;z-index:1;color:#aaa;float: left;" class="fa fa-search"></i>
+                            <input type='text' id="focus" 
+                                    style='flex:1; margin-left: -22px; padding-left: 32px;color:steelblue; border: none'
+                                    ng-model="wiModal.filterFamily">
+                        </div>
+                        <div style="height: 400px;overflow-y: overlay;display:flex; border: 1px solid #ccc; border-top: none" class='box-shadow-ccc'>
+                            <wi-scroll id-scroll='"__familyScroll"' style='flex:1;display:flex;flex-direction:column;' up-trigger="wiModal.upTriggerFamily" down-trigger='wiModal.downTriggerFamily' animation-timeout="0">
+                                <wi-base-treeview
+                                    name="__family"
+                                    container="wiModal"
+                                    config="wiModal.familyConfig"
+                                    on-click-function='wiModal.onClickFamilyFunction'
+                                    filter="{{wiModal.filterFamily}}">
+                                </wi-base-treeview>
+                            </wi-scroll>
+                        </div>
+                    </div>
+                </div>
+              </div>
+                <!-- <style>
                   .list-group {
                     max-height: calc(100% - 220px);
                     overflow: auto;
@@ -37,7 +83,8 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
+                
             </div>
             <div class="modal-footer">
                 <button class='btn btn-default' ng-click='wiModal.onOkButtonClicked()'><span class="ok-16x16"></span>&nbsp;Ok
