--- a/source/dialogs/crossplot-format/crossplot-format-modal.html
+++ b/source/dialogs/crossplot-format/crossplot-format-modal.html
@@ -120,7 +120,7 @@
                                             </div>
                                             <div style="flex: 1; position: relative; overflow-y: auto;">
                                                 <wi-base-treeview id='{{wiModal.taskDataTreeName}}' name='wiCrossplotFormatModalTaskDataTreeName' style="margin-left: 0px;" config='wiModal.taskConfig.inputData'
-                                                on-click-function='wiModal.taskClickFuntion' show-context-menu-function='wiModal.taskShowContextMenu'
+                                                on-click-function='wiModal.taskClickFunction' show-context-menu-function='wiModal.taskShowContextMenu'
                                                 filter='{{wiModal.inputFilter}}' filter-by='{{wiModal.typeFilter}}'>
                                                 </wi-base-treeview>
                                                 <div ng-if="!wiModal.taskConfig.inputData.length" class='dropLabel'>DROP DATASET HERE</div>
@@ -133,8 +133,9 @@
                     </wi-tab>
                     <wi-tab heading="Configurations">
                         <div class="container-fluid">
-                            <form class="form-horizontal form-condensed">
-                                <div class="row">
+                            <form class="form-horizontal form-condensed"
+                            style="display:flex;flex-direction:column;height:90%">
+                                <div>
                                     <div class="col-sm-6 text-center padding-bottom-0_5em padding-top-1em">
                                         <div class="row padding-bottom-0_5em">
                                             <strong>Scales</strong>
@@ -197,68 +198,68 @@
                                         </div>
                                     </div>
                                 </div>
-                                <hr>
-                                <div style="height:100%;display:flex;flex-direction:row;padding:10px;">
+                                <hr style="width:100%">
+                                <div style="flex:1;display:flex;flex-direction:row;padding:10px;">
                                     <div class="panel panel-default tree-side">
+                                        <div style='display:flex;' class='panel-heading'>
+                                            <h6 style="font-weight:700">Datasets</h6>
+                                        </div>
                                         <div style="flex: 1; position: relative; overflow-y: auto;">
-                                            <wi-base-treeview id='{{wiModal.taskDataTreeName}}' name='wiCrossplotFormatModalTaskDataTreeName' style="margin-left: 0px;" config='wiModal.taskConfig.inputData'>
+                                            <wi-base-treeview id='{{wiModal.taskDataTreeName}}' name='wiCrossplotFormatModalTaskDataTreeName' style="margin-left: 0px;" config='wiModal.inputDataClone'
+                                            on-click-function='wiModal.datasetPropsClickFunction'>
                                             </wi-base-treeview>
                                         </div>
                                     </div>
-                                    <div style="flex:2;margin-left: 5px;">
-                                        <div class="panel panel-default" style='height: 100%;display:flex;flex-direction: column;'>
-                                            <ul>
-                                                <li style="list-style-type: none"
-                                                ng-repeat="props in wiModal.curvesProperties"
-                                                ng-if="props.flag != 'delete'">
-                                                    <div class="row">
-                                                        <div class="col-sm-5">
-                                                            <div class="form-group">
-                                                                <label class="col-sm-4 font-weight-normal">Symbol</label>
-                                                                <div class="col-sm-8">
-                                                                    <ui-select theme="bootstrap"
-                                                                        ng-model="props.options.pointSymbol"
-                                                                        ng-change="wiModal.onChange(props)"
-                                                                        search-enabled='false'>
-                                                                        <ui-select-match>
-                                                                            <div ng-repeat="type in wiModal.pointSymbolList"
-                                                                                ng-if="props.options.pointSymbol==type">
-                                                                                <canvas id="{{type}}-match-{{props.idWell}}" class="valign-bottom" width="20" height="20" wi-element-ready="wiModal.drawIcon(type+'-match-'+props.idWell, type)"></canvas>{{type}}
-                                                                            </div>
-                                                                        </ui-select-match>
-                                                                        <ui-select-choices repeat="type in wiModal.pointSymbolList" position="down">
-                                                                            <canvas id="{{type}}" width="20" height="20" class="valign-bottom" wi-element-ready="wiModal.drawIcon(type, type)"></canvas>&nbsp;{{type}}
-                                                                        </ui-select-choices>
-                                                                    </ui-select>
+                                    <div style="display:flex;flex:2;padding-left:10px;">
+                                        <div class="panel panel-default"
+                                        style='display:flex;flex-direction:column;margin-bottom:0px;width:100%'>
+                                            <div class='panel-heading'>
+                                                <h6 style="font-weight:700">
+                                                    Display Properties ({{wiModal.selectedDatasetProps.name}})
+                                                </h6>
+                                            </div>
+                                            <div ng-if="wiModal.selectedDatasetProps">
+                                                <div class="col-sm-12 input-field">
+                                                    <label class="col-sm-3">Symbol</label>
+                                                    <div class="col-sm-9">
+                                                        <ui-select theme="bootstrap"
+                                                            ng-model="wiModal.selectedDatasetProps.options.pointSymbol"
+                                                            ng-change="wiModal.onChange(wiModal.selectedDatasetProps)"
+                                                            search-enabled='false'>
+                                                            <ui-select-match>
+                                                                <div ng-repeat="type in wiModal.pointSymbolList"
+                                                                    ng-if="wiModal.selectedDatasetProps.options.pointSymbol==type">
+                                                                    <canvas id="{{type}}-match-{{wiModal.selectedDatasetProps.idWell}}" class="valign-bottom" width="20" height="20" wi-element-ready="wiModal.drawIcon(type+'-match-'+wiModal.selectedDatasetProps.idWell, type)"></canvas>{{type}}
                                                                 </div>
-                                                            </div>
-                                                        </div>
-                                                        <div class="col-sm-4">
-                                                            <div class="form-group">
-                                                                <label class="col-sm-4 font-weight-normal">Size</label>
-                                                                <div class="col-sm-8">
-                                                                    <input type="number" class="form-control wi-form-control"
-                                                                        ng-model="props.options.pointSize"
-                                                                        ng-change="wiModal.onChange(props)">
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                        <div class="col-sm-3">
-                                                            <div class="form-group">
-                                                                <label class="col-sm-3 font-weight-normal">Color</label>
-                                                                <div class="col-sm-9">
-                                                                    <div class="float-left">
-                                                                        <button type="button" ng-click="wiModal.colorSymbol(props);"
-                                                                            ng-style="{'background-color':props.options.pointColor}"
-                                                                            class="form-control wi-form-control width-80px thick-border">
-                                                                        </button>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
+                                                            </ui-select-match>
+                                                            <ui-select-choices repeat="type in wiModal.pointSymbolList" position="down">
+                                                                <canvas id="{{type}}" width="20" height="20" class="valign-bottom" wi-element-ready="wiModal.drawIcon(type, type)"></canvas>&nbsp;{{type}}
+                                                            </ui-select-choices>
+                                                        </ui-select>
+                                                    </div>
+                                                </div>
+                                                <div class="col-sm-12 input-field">
+                                                    <label class="col-sm-3">Size</label>
+                                                    <div class="col-sm-9">
+                                                        <input type="number" class="form-control wi-form-control"
+                                                            ng-model="wiModal.selectedDatasetProps.options.pointSize"
+                                                            ng-change="wiModal.onChange(wiModal.selectedDatasetProps)">
+                                                    </div>
+                                                </div>
+                                                <div class="col-sm-12 input-field">
+                                                    <label class="col-sm-3">Color</label>
+                                                    <div class="col-sm-9">
+                                                        <div style="display:inline-block;margin-bottom:5px;vertical-align:middle;">
+                                                            <button type="button"
+                                                                ng-click="wiModal.colorSymbol(wiModal.selectedDatasetProps);"
+                                                                ng-style="{'background-color':wiModal.selectedDatasetProps.options.pointColor}"
+                                                                class="form-control wi-form-control width-80px thick-border"
+                                                                style="width:70px;">
+                                                            </button>
                                                         </div>
                                                     </div>
-                                                </li>
-                                            </ul>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -279,6 +280,9 @@
         </div>
     </div>
     <style>
+        .input-field {
+            margin-top:15px;
+        }
         .margin-bottom-0 {
             margin-bottom: 0;
         }
