--- a/source/dialogs/create-new-zone/create-new-zone-modal.html
+++ b/source/dialogs/create-new-zone/create-new-zone-modal.html
@@ -89,7 +89,7 @@
                                                 </td>
                                                 <td width="55%" style="text-align: center; vertical-align: middle; font-size: 13px">
                                                     <label class="btn btn-default thick-border padding-0">
-                                                        <wi-canvas-rect name="rowZS_{{wiModal.returnZone.idZoneTemplate}}" pattern="{{wiModal.returnZone.pattern}}" width="100"
+                                                        <wi-canvas-rect name="rowZS_{{$index}}" pattern="{{wiModal.returnZone.pattern}}" width="100"
                                                             height="26" foreground="{{wiModal.returnZone.foreground}}" background='{{wiModal.returnZone.background}}'>
                                                         </wi-canvas-rect>
                                                     </label>
