--- a/source/html/index.html
+++ b/source/html/index.html
@@ -153,8 +153,8 @@
     </template>
 
     <template id='property-block'>
-        <!-- <wi-properties name="WiProperties" list-config=" "></wi-properties> -->
-        <wi-props name="WiProps" input="inputProps" config="configData"></wi-props>
+        <!-- <wi-properties name="WiProperties" list-config="myPropertiesConfig"></wi-properties> -->
+        <wi-props name="WiProps" input="inputProps" config="configData" typeprops="typeProps"></wi-props>
     </template>
     <template id="stack-header-control">
         <div class="stack-header-control">
