add parameter set

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -82,6 +82,7 @@
     <link href='css/main.css' rel='stylesheet'>
     <link href='css/wi-zone-template-manager.css' rel='stylesheet'>
     <link href='css/wi-zone-set-manager.css' rel='stylesheet'>
+    <link href='css/wi-parameter-set.css' rel='stylesheet'>
 
     <!-- Insert this line above script imports  -->
     <script>
