add new pattern

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -155,7 +155,7 @@
 
     <template id='property-block'>
         <!-- <wi-properties name="WiProperties" list-config="myPropertiesConfig"></wi-properties> -->
-        <wi-props name="WiProps" input="inputProps" config="configData" typeprops="typeProps"></wi-props>
+        <wi-props name="WiProps" input="inputProps" config="configData" typeprops="typeProps" onchangefunc="onChangeProps"></wi-props>
     </template>
     <template id="stack-header-control">
         <div class="stack-header-control">
