--- a/source/dialogs/prompt/prompt-modal.html
+++ b/source/dialogs/prompt/prompt-modal.html
@@ -7,18 +7,27 @@
 			</div>
 			<div class="modal-body text-center">
 				<div class="form-horizontal">
-					<div class="form-group">
+					<div class="form-group" ng-if="!wiModal.inputs">
 						<label class="control-label col-sm-4" for="name">{{wiModal.inputName}}:</label>
 						<div class="col-sm-8">
-							<input ng-if="wiModal.type != 'select'" type="{{wiModal.type}}" class="form-control"
+							<input ng-if="wiModal.type != 'select'" type="{{wiModal.type || 'text'}}" class="form-control"
 								ng-model="wiModal.input"
-								ng-click="wiModal.error = null"
 								required autofocus>
 							<select ng-if="wiModal.type == 'select'"
 											class="form-control wi-form-control"
-											wi-enter="wiModal.onOkButtonClicked()"
 											ng-model="wiModal.input"
 											ng-options="option as option.label for option in wiModal.options"></select>
+						</div>
+					</div>
+					<div class="form-group" ng-repeat="input in wiModal.inputs">
+						<label class="control-label col-sm-4" for="name" ng-bind="input.inputName"></label>
+						<div class="col-sm-8">
+							<input ng-if="wiModal.type != 'select'" type="{{input.type || 'text'}}" class="form-control"
+								ng-model="input.input" required="!input.optional" autofocus>
+							<select ng-if="input.type == 'select'"
+											class="form-control wi-form-control"
+											ng-model="input.input" required="!input.optional"
+											ng-options="option as option.label for option in input.options"></select>
 						</div>
 					</div>
 				</div>
