--- a/source/html/index.html
+++ b/source/html/index.html
@@ -83,6 +83,7 @@
     <link href='css/wi-zone-template-manager.css' rel='stylesheet'>
     <link href='css/wi-zone-set-manager.css' rel='stylesheet'>
     <link href='css/wi-parameter-set.css' rel='stylesheet'>
+    <link href='css/wi-marker-manager.css' rel='stylesheet'>
 
     <!-- Insert this line above script imports  -->
     <script>
